Nits to make the tests more realistic